<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">兌發票</string>
    <string name="award_name">中獎發票清單</string>
    <string name="teaching_name">app教學</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">清除此期發票記錄</string>
    <string name="one"> 1 </string>
    <string name="two"> 2 </string>
    <string name="three"> 3 </string>
    <string name="four"> 4 </string>
    <string name="five"> 5 </string>
    <string name="six"> 6 </string>
    <string name="seven"> 7 </string>
    <string name="eight"> 8 </string>
    <string name="nine"> 9 </string>
    <string name="delete">刪除</string>
    <string name="teachTitle">操作說明</string>
    <string name="teachContent">輸入後發票後三碼，
        若有不只六獎中獎機會，將輸入8碼發票號碼，
        已更精準的對獎。若是發票有中獎，將可以記錄於行事曆。
    </string>
    <string name="pulldown2KeepCalendar">下拉將設定兌獎日期於日曆</string>
    <string name="lookInvoice">觀看目前中獎發票</string>

    <array name="invoicesStatus">
        <item>全部</item>
        <item>中獎</item>
        <item>未中獎</item>
    </array>

    <!--<string name="title_activity_main_activity_v2">MainActivityV2</string>-->
    <string name="title_section1">後三碼對獎</string>
    <string name="title_section2">先輸入後兌獎</string>
    <string name="title_section3">兌獎資訊</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="notWinning">沒中獎，換別張輸入</string>
    <string name="now_win">沒中獎</string>

    <string name="know">知道</string>
    <string name="noReminder">不再提醒</string>

    <string name="addCalendar">加入行事曆</string>
    <string name="addCalendarBtn">%d張中獎發票!</string>
    <string name="messageBoxHint">訊號說明</string>
    <string name="plsEnter">輸入．．．</string>
    <string name="cleanInvoice">清除此發票輸入紀錄</string>
    <string name="ok">好</string>
    <string name="cancer">不用</string>
    <string name="goMain">無中獎發票，返回首頁</string>
    <string name="no_award_message">無中獎發票</string>
    <string name="no_award_change">沒得獎，換一張</string>
    <string name="haveOpportunity">有中大獎的可能，請輸入完整發票號</string>
    <string name="dateOfAward">領獎日期</string>

    <string name="get6Award">中六獎</string>
    <string name="plsOtherQr">此QR條碼並非為發票號碼，請掃描別組條碼。</string>
    <string name="downloadFromGooglePlay">請先安裝QR CODE 掃描APP，將可以用QR CODE 掃描方式對發票。</string>

    <string name="teachingCamera">點擊此按鈕可以使用QR CODE對發票</string>

    <string name="next_label">下一期</string>
    <string name="before_label">上一期</string>
    <string name="status_label">發票資訊</string>

    <string name="tool_first_label">兌獎</string>
    <string name="tool_second_label">關於</string>
    <string name="tool_second_label_content">對於本APP，有意見或是有創意的想法，想告知的話，請寄信通知，
        評估分析後，若是不錯的想法，將加入下一次更新
        ，兌獎資料來自於財政部。</string>
    <string name="about_app_name">關於</string>
    <string name="loading_content">最新期</string>
    <string name="loading">更新中...</string>
    <string name="menu_add_lab">新增發票</string>
    <string name="add_invoice_btn_lab">新增</string>

    <string name="blank_text">尚未加入發票</string>

    <string name="job_teaching_txt">此兌獎方式是透過右下角新增發票，\n
新增後此清單後，下拉清單將此發票清單，\n
其中兌獎後將出現三種分類\n
1.中獎發票\n
2.有中獎機會發票\n
3.無中獎發票。\n
其中有疑慮的為有中獎發票，\n
表示的意思是有中獎可能，\n
必須修改發票號碼，\n
修改後按下「更新發票號碼」，\n
繼續下拉畫面，將可重新兌獎。</string>

    <string name="add_invoice_activity_title">新增發票</string>

    <string name="add_invoice_activtyi_lab">完整發票號</string>
    <string name="add_invoice_activtyi_btn_lab">新增發票</string>
    <string name="add_invoice_messsage">輸入完3碼後，將自動新增</string>

    <string name="invoice_list_hin">下拉清單，將兌獎</string>
    <string name="invoice_list_tool_lab">批次發票兌獎</string>

    <string name="main_topic_lab">領獎時間:%s</string>


    <string-array name="list_items">
        <item>中獎發票</item>
        <item>有中獎機會</item>
        <item>無中獎發票</item>
    </string-array>

    <string name="update_invoice">更新發票號碼</string>
    <string name="value_change_2_save">數字變更，請點擊更新</string>

    <string name="recy_adtper_lab1">無中獎</string>
    <string name="recy_adtper_lab2">有得獎機會</string>


    <string name="loading_activtiy_lab">最新期數:%s</string>
    <string name="get_award_list">恭喜有中獎發票。</string>

    <string name="get_continue_award">有可能中獎清單。</string>
    <string name="get_no_award">無中獎清單。</string>

    <string name="add_invoice_list_count">本次輸入發票數量:%s</string>
    <string name="ready2InsetInvoice">剛剛新增之發票－＞%s</string>
</resources>
